name:                elm-watcher
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/paramanders/elm-watcher#readme
license:             BSD3
license-file:        LICENSE
author:              Paramander
maintainer:          info@paramander.com
copyright:           2016 Paramander
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Compile
                   , Watcher
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , fsnotify >= 0.2
                   , filepath
                   , directory
                   , elm-compiler >= 0.16 && < 0.17

